# discretize-gear-optimizer

./: .editorconfig  .env  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.js  .prettierignore  .prettierrc  1024-1de4b7a9519345966786.js  1024-1de4b7a9519345966786.js.map  1024-ffc4acc898cce7a1faa3.js  1024-ffc4acc898cce7a1faa3.js.map  1024.render-page.js  1024.render-page.js.map  1218-740592ccf0139a976fd9.js  1218-740592ccf0139a976fd9.js.map  1218-cf3656788c5bdb068d6f.js  1218-cf3656788c5bdb068d6f.js.map  1218.render-page.js  1218.render-page.js.map  1224-46b4c48f165a8f0a0b69.js  1224-46b4c48f165a8f0a0b69.js.map  1224-7bd187a306b186201f3f.js  1224-7bd187a306b186201f3f.js.map  1224.render-page.js  1224.render-page.js.map  1225-a250c339b4c6b02394a9.js  1225-a250c339b4c6b02394a9.js.map  1225-bd09bdfe4c27627e7e86.js  1225-bd09bdfe4c27627e7e86.js.map  1225.render-page.js  1225.render-page.js.map  1288-ac9d062939b837be2021.js  1288-ac9d062939b837be2021.js.map  1288-d1d5d41e046ca964b395.js  1288-d1d5d41e046ca964b395.js.map  1288.render-page.js  1288.render-page.js.map  (+2491 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: new-optimizer.md  old-optimizer.md
.github/workflows/: build-deploy-backup.yml  build-deploy.yml  build-image.yml  build-with-image.yml  legacy-build-deploy.yml  main-build-deploy-GH.yml  prettier-check.yml  previews-cf-dependabot.yml  previews-cf.yml  staging-build-deploy-no-cache.yml  staging-build-deploy.yml  staging-build-nodeploy.yml  staging-cf.yml  test-all.yml  test-modifiers.yml  test-presets.yml  test-rust.yml  test-typecheck.yml  warmup-cache.yml
.husky/: pre-commit
404/: index.html
assets/: BuildPageSchema_v0-2868cbab.js  BuildPageSchema_v0.1d3634a4.js  BuildPageSchema_v0.2cf17aa0.js  BuildPageSchema_v0.5f27c9e9.js  BuildPageSchema_v0.760e04b2.js  BuildPageSchema_v0.906fbe98.js  BuildPageSchema_v0.910cfe97.js  BuildPageSchema_v0.94c74c39.js  BuildPageSchema_v0.9768ee18.js  BuildPageSchema_v0.a9a93b6c.js  BuildPageSchema_v0.bafed88d.js  BuildPageSchema_v0.bd872024.js  BuildPageSchema_v0.c12c9423.js  BuildPageSchema_v0.c767f164.js  BuildPageSchema_v0.dc00166c.js  BuildPageSchema_v0.dffc5ea5.js  BuildPageSchema_v0.ecb7c189.js  BuildPageSchema_v0.f3b01911.js  BuildPageSchema_v1-ff6f8d44.js  BuildPageSchema_v1.0234bcc0.js  BuildPageSchema_v1.1e7a706e.js  BuildPageSchema_v1.3ec2aee3.js  BuildPageSchema_v1.4723be23.js  BuildPageSchema_v1.47f81afb.js  BuildPageSchema_v1.53033477.js  BuildPageSchema_v1.552ba51c.js  BuildPageSchema_v1.639496bf.js  BuildPageSchema_v1.6d2da56e.js  BuildPageSchema_v1.6edff9ea.js  BuildPageSchema_v1.8ee260fe.js  BuildPageSchema_v1.92cde552.js  BuildPageSchema_v1.d40ab0c9.js  BuildPageSchema_v1.d5100172.js  BuildPageSchema_v1.dc7a5e01.js  BuildPageSchema_v1.deb0d583.js  BuildPageSchema_v1.e85b2b19.js  ResultCharacter-9d86eb3a.css  ResultCharacter-a491fe2a.js  ResultCharacter.075d0691.js  ResultCharacter.1ea130a7.js  (+58 more)
de/: 404.html  index.html
de/404/: index.html
docs/: 2. Contributing.md  3. Data Format.md  3.1 Data - Modifiers.md  3.2 Data - Templates and Presets.md  4. Localization.md  Coefficients.md  How It Works.md  README.md
docs/Contributing/: EnvVariables.md  LinkShortener.md  Localization.md  Readme.md
extract_context_injection/: index.cjs  index.js
functions/share/: create.ts  load.ts
gulp/: gulp-build.bat  gulp-clean.bat  gulp-copy.bat  gulp-css.bat  gulp-fonts.bat  gulp-html.bat  gulp-img.bat  gulp-js.bat  gulp-watch.bat
page-data/: app-data.json
plugins/: YAMLImporter.js
public/: CNAME  worker.js
src/: .htaccess  global.d.ts  index.html  index_backup.html  main.jsx  vite-env.d.ts
static/: menomonia-italic-3a69421d1c8b7883e6fe687e7570399a.eot
wasm_module/: Cargo.toml
wasm_module/.cargo/: config
wasm_module/benches/: core.rs  mediumdata.json  smalldata.json
wasm_module/src/: data.rs  gw2data.rs  lib.rs  lib_debug.rs  mappings.rs  optimizer_core.rs  result.rs  utils.rs
wasm_module/src/data/: affix.rs  attribute.rs  character.rs  combination.rs  misc.rs  resultcharacter.rs  settings.rs
zh/: 404.html  index.html
(+560 files in other folders)
